[package]
name = "escaping"
version = "0.1.0"
edition = "2024"
authors = ["Eric Stokes <letaris@gmail.com>"]
repository = "https://github.com/estokes/escaping"
description = "configurable string escaping and unescaping"
documentation = "https://docs.rs/escaping"
license = "MIT"
categories = ["text-processing"]

[dependencies]
anyhow = "1"
