[package]
name = "escaping"
version = "0.2.3"
edition = "2024"
authors = ["Eric Stokes <letaris@gmail.com>"]
repository = "https://github.com/estokes/escaping"
description = "configurable string escaping and unescaping"
documentation = "https://docs.rs/escaping"
license = "MIT"
categories = ["text-processing"]
readme = "README.md"

[dependencies]
anyhow = "1"
compact_str = "0.9"

[dev-dependencies]
proptest = "1"
